--- a/index.html
+++ b/index.html
@@ -76,15 +76,15 @@
     <!-- Wrapper for slides -->  
     <div class="carousel-inner" role="listbox">  
       <div class="item active">  
-        <img src="images/Logopit_1539172799518%20(1).png" alt="jokes 1" >  
+        <img src="images/download%20(1).jpg" alt="jokes 1" >  
       </div>  
   
       <div class="item">  
-        <img src="images/Logopit_1539172838735%20(1).png" alt="jokes 2" >  
+        <img src="images/download%20(3).jpg" alt="jokes 2" >  
       </div>  
       
       <div class="item">  
-        <img src="images/Logopit_1539172838735.png" alt="jokes 3" >  
+        <img src="images/download.jpg" alt="jokes 3" >  
       </div>  
     </div>  
   
@@ -105,8 +105,35 @@
     <div class="row">
         <div id="col-sm-12">
             <div class="jumbotron">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eu sem tempor, varius quam at, luctus dui. Mauris magna metus, dapibus nec turpis vel, semper malesuada ante. Vestibulum id metus ac nisl bibendum scelerisque non non purus. Suspendisse varius nibh non aliquet sagittis. In tincidunt orci sit amet elementum vestibulum. Vivamus fermentum in arcu in aliquam. Quisque aliquam porta odio in fringilla. Vivamus nisl leo, blandit at bibendum eu, tristique eget risus. Integer aliquet quam ut elit suscipit, id interdum neque porttitor. Integer faucibus ligula.</p>
-            <p>Vestibulum quis quam ut magna consequat faucibus. Pellentesque eget nisi a mi suscipit tincidunt. Ut tempus dictum risus. Pellentesque viverra sagittis quam at mattis. Suspendisse potenti. Aliquam sit amet gravida nibh, facilisis gravida odio. Phasellus auctor velit at lacus blandit, commodo iaculis justo viverra. Etiam vitae est arcu. Mauris vel congue dolor. Aliquam eget mi mi. Fusce quam tortor, commodo ac dui quis, bibendum viverra erat. Maecenas mattis lectus enim, quis tincidunt dui molestie euismod. Curabitur et diam tristique, accumsan nunc eu, hendrerit tellus.</p>
+            <p>IND VS WI SQUADS:
+India-
+
+Virat Kohli(c), Kuldeep Yadav, Mohammed Shami, Umesh Yadav, Prithvi Shaw, Mohammed Siraj, Ravichandran Ashwin, Shardul Thakur, Cheteshwar Pujara, Lokesh Rahul, Mayank Agarwal, Ajinkya Rahane, Hanuma Vihari, Rishabh Pant, Ravindra Jadeja
+<br>
+Windies-
+
+Jason Holder(c), Jahmar Hamilton, Shimron Hetmyer, Sherman Lewis, Keemo Paul, Kieran Powell, Shannon Gabriel, Jomel Warrican, Shai Hope, Roston Chase, Sunil Ambris, Kemar Roach, Devendra Bishoo, Kraigg Brathwaite, Shane Dowrich
+<br>
+IND
+
+Wicket-keeper: Rishabh Pant
+
+Batsmen: Prithvi Shaw, Lokesh Rahul, Virat Kohli (c), Ajinkya Rahane, Cheteshwar Pujara
+
+All-rounder: Ravindra Jadeja, Ravichandran Ashwin
+
+Bowlers: Umesh Yadav, Kuldeep Yadav, Mohammed Shami
+<br>
+WI
+
+Wicket-keeper: Shane Dowrich
+
+Batsmen: Kraigg Brathwaite, Shai Hope, Sunil Ambris, Shimron Hetmyer, Kieran Powell
+
+All-rounder: Roston Chase, Jason Holder
+<br>
+Bowlers: Devendra Bishoo, Keemo Paul, Kemar Roach, Shannon Gabriel/Sherman Lewis.</p>
+<p>Vestibulum quis quam ut magna consequat faucibus. Pellentesque eget nisi a mi suscipit tincidunt. Ut tempus dictum risus. Pellentesque viverra sagittis quam at mattis. Suspendisse potenti. Aliquam sit amet gravida nibh, facilisis gravida odio. Phasellus auctor velit at lacus blandit, commodo iaculis justo viverra. Etiam vitae est arcu. Mauris vel congue dolor. Aliquam eget mi mi. Fusce quam tortor, commodo ac dui quis, bibendum viverra erat. Maecenas mattis lectus enim, quis tincidunt dui molestie euismod. Curabitur et diam tristique, accumsan nunc eu, hendrerit tellus.</p>
             <hr>
         </div>
             
@@ -118,4 +145,4 @@
 
   
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>  
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>              
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>                          
